tests/ui/ferrocene/compiler-arguments/upper_c_opt-level/upper_c_opt-level_space-eq.rs
//@ check-fail
//@ compile-flags: -C opt-level=
//~? ERROR level needs to be

fn main() {}

// ferrocene-annotations: um_rustc_C_opt_level
